<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp"
    tools:context=".Profile">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardview_default_radius"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:id="@+id/area1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/fotoprofile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="95dp">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/namaprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/namaprofile"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_below="@+id/fotoprofile">

            </TextView>

            <TextView
                android:id="@+id/skillprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skilprofile"
                android:textStyle="italic"
                android:textAlignment="center"
                android:layout_below="@+id/namaprofile">

            </TextView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/carddesk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/cardview_default_radius"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="210dp">

        <ScrollView
            android:id="@+id/area2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/deskprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskprofile">

            </TextView>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</RelativeLayout>