<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:src="#909090">

                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/dashboard"
                    android:textSize="20dp"
                    android:textColor="@color/cardview_light_background">

                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/row"
                    android:textSize="20dp"
                    android:textColor="@color/cardview_light_background">

                </TextView>
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="280dp"
                    android:src="@drawable/profile">

                </de.hdodenhof.circleimageview.CircleImageView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profil"
                        android:layout_width="160dp"
                        android:layout_height="180dp"
                        android:layout_margin="5dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="@dimen/cardview_default_radius"
                        android:layout_gravity="left">

                        <ImageButton
                            android:id="@+id/tombol1"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/ic_person_black_24dp">
                        </ImageButton>
                        <TextView
                            android:id="@+id/textprofile"
                            android:layout_marginTop="145dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/profile">
                        </TextView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/projek"
                        android:layout_width="160dp"
                        android:layout_height="180dp"
                        android:layout_margin="5dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="@dimen/cardview_default_radius"
                        android:layout_gravity="right">

                        <ImageButton
                            android:id="@+id/tombol2"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/ic_android_black_24dp">
                        </ImageButton>
                        <TextView
                            android:id="@+id/textprojek"
                            android:layout_marginTop="145dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/projek">
                        </TextView>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="175dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/pendidikan"
                        android:layout_width="160dp"
                        android:layout_height="180dp"
                        android:layout_margin="5dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="@dimen/cardview_default_radius"
                        android:layout_gravity="left">

                        <ImageButton
                            android:id="@+id/tombol3"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/ic_school_black_24dp">
                        </ImageButton>
                        <TextView
                            android:id="@+id/textpendik"
                            android:layout_marginTop="145dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/pendidikan">
                        </TextView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/skill"
                        android:layout_width="160dp"
                        android:layout_height="180dp"
                        android:layout_margin="5dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="@dimen/cardview_default_radius"
                        android:layout_gravity="right">

                        <ImageButton
                            android:id="@+id/tombol4"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/ic_assignment_ind_black_24dp">
                        </ImageButton>
                        <TextView
                            android:id="@+id/textskill"
                            android:layout_marginTop="145dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/keahlian">
                        </TextView>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="350dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/Kontak"
                        android:layout_width="160dp"
                        android:layout_height="180dp"
                        android:layout_margin="5dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="@dimen/cardview_default_radius"
                        android:layout_gravity="left">

                        <ImageButton
                            android:id="@+id/tombol5"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/ic_contacts_black_24dp">
                        </ImageButton>
                        <TextView
                            android:id="@+id/textkontak"
                            android:layout_marginTop="145dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/kontak">
                        </TextView>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/sertifikat"
                        android:layout_width="160dp"
                        android:layout_height="180dp"
                        android:layout_margin="5dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="@dimen/cardview_default_radius"
                        android:layout_gravity="right">

                        <ImageButton
                            android:id="@+id/tombol6"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/ic_description_black_24dp">
                        </ImageButton>
                        <TextView
                            android:id="@+id/textsertif"
                            android:layout_marginTop="145dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/sertifikat">
                        </TextView>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>