<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:padding="5dp"
    tools:context=".Projek">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_radius">

                <RelativeLayout
                    android:id="@+id/projek1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/fotoprojek1"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_android_black_24dp">
                    </ImageView>
                    <TextView
                        android:id="@+id/textprojek1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/android"
                        android:layout_toRightOf="@+id/fotoprojek1"
                        android:textStyle="bold"
                        android:textSize="20dp">
                    </TextView>
                    <TextView
                        android:id="@+id/deskprojek1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/deskandroid"
                        android:textSize="15dp"
                        android:layout_toRightOf="@id/fotoprojek1"
                        android:layout_below="@id/textprojek1">
                    </TextView>
                    <Button
                        android:id="@+id/btnandroid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/fotoprojek1"
                        android:layout_below="@id/deskprojek1"
                        android:hint="Lihat sekarang">

                    </Button>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_radius">

                <RelativeLayout
                    android:id="@+id/projek2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/fotoprojek2"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_web_black_24dp">
                    </ImageView>
                    <TextView
                        android:id="@+id/textprojek2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/web"
                        android:layout_toRightOf="@+id/fotoprojek2"
                        android:textStyle="bold"
                        android:textSize="20dp">
                    </TextView>
                    <TextView
                        android:id="@+id/deskprojek2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/deskweb"
                        android:textSize="15dp"
                        android:layout_toRightOf="@id/fotoprojek2"
                        android:layout_below="@id/textprojek2">
                    </TextView>
                    <Button
                        android:id="@+id/btnweb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/fotoprojek2"
                        android:layout_below="@id/deskprojek2"
                        android:hint="Lihat sekarang">

                    </Button>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>