<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kontak">

    <RelativeLayout
        android:id="@+id/fotokontak"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/kontak">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/cardview_default_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/icontlp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_local_phone_black_24dp">

                </ImageView>
                <TextView
                    android:id="@+id/nomortlp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/notlp"
                    android:textColor="@color/cardview_dark_background"
                    android:layout_toRightOf="@id/icontlp">

                </TextView>
                <TextView
                    android:id="@+id/kettlp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tipe"
                    android:layout_below="@id/nomortlp"
                    android:layout_toRightOf="@id/icontlp">

                </TextView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_message_black_24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="295dp">

                </ImageView>

            </RelativeLayout>

            <View
                android:layout_width="280dp"
                android:layout_height="1dp"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="50dp"
                android:visibility="visible"
                android:background="@color/cardview_shadow_start_color"
                android:layout_below="@+id/kettlp">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:layout_marginTop="60dp">

                <ImageView
                    android:id="@+id/iconemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_email_black_24dp">

                </ImageView>
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/email"
                    android:layout_toRightOf="@id/iconemail"
                    android:textColor="@color/cardview_dark_background"
                    android:textStyle="italic">

                </TextView>
                <TextView
                    android:id="@+id/ketemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tipe"
                    android:layout_below="@id/email"
                    android:layout_toRightOf="@id/iconemail">

                </TextView>

            </RelativeLayout>

            <View
                android:layout_width="280dp"
                android:layout_height="1dp"
                android:layout_marginTop="115dp"
                android:layout_marginLeft="50dp"
                android:visibility="visible"
                android:background="@color/cardview_shadow_start_color"
                android:layout_below="@+id/kettlp">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:layout_marginTop="120dp">

                <ImageView
                    android:id="@+id/iconwa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/whatsapp">

                </ImageView>
                <TextView
                    android:id="@+id/wa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/nowa"
                    android:layout_toRightOf="@id/iconwa"
                    android:textColor="@color/cardview_dark_background">

                </TextView>
                <TextView
                    android:id="@+id/ketwa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tipe"
                    android:layout_below="@id/wa"
                    android:layout_toRightOf="@id/iconwa">

                </TextView>

            </RelativeLayout>

            <View
                android:layout_width="280dp"
                android:layout_height="1dp"
                android:layout_marginTop="175dp"
                android:layout_marginLeft="50dp"
                android:visibility="visible"
                android:background="@color/cardview_shadow_start_color"
                android:layout_below="@+id/kettlp">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:layout_marginTop="180dp">

                <ImageView
                    android:id="@+id/iconig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/instagram">

                </ImageView>
                <TextView
                    android:id="@+id/ig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/ig"
                    android:layout_toRightOf="@id/iconig"
                    android:textColor="@color/cardview_dark_background">

                </TextView>
                <TextView
                    android:id="@+id/ketig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tipe"
                    android:layout_below="@id/ig"
                    android:layout_toRightOf="@id/iconig">

                </TextView>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>